<resources>
    <string name="app_name">BrewGuru</string>
    <string-array name="tabs">
        <item>Brew Details</item>
        <item>Fermentables</item>
        <item>Hops</item>
        <item>Mash</item>
        <item>Yeast</item>
        <item>Water Chemistry</item>
    </string-array>

    <!-- Brew Fragment Strings -->
    <string name="brew_name_text">Brew Name</string>
    <string name="brew_name_hint">Enter Brew Name</string>
    <string name="brew_style_text">Brew Style</string>
    <string-array name="brew_style_dropdown">
        <item>IPA</item>
        <item>Pilsner</item>
        <item>Lager</item>
        <item>Porter</item>
        <item>Stout</item>
        <item>Hefeweizen</item>
    </string-array>

    <string name="brew_method_text">Brew Method</string>
    <string-array name="brew_method_dropdown">
        <item>All Grain</item>
        <item>Partial Mash</item>
        <item>Extract</item>
        <item>BIAB</item>
    </string-array>

    <string name="batch_size_text">Batch Size</string>
    <string name="boil_size_text">Boil Size</string>

    <!-- Fermentable Fragment -->
    <!-- units -->
    <string name="amount_hint">Amount</string>
    <string-array name="amount_units">
        <item>lb</item>
        <item>oz</item>
    </string-array>

    <!-- List of fermentables -->
    <string name="fermentables_hint">Select Fermentable</string>
    <string-array name="fermentables_list">
        <item>Select Item</item>
        <item>Pale 2-Row</item>
        <item>Munich</item>
        <item>Abbey Malt</item>
        <item>Acerola</item>
    </string-array>

</resources>
